Fixed header divider wrong position bug

--- a/src/Frontend/src/components/common/Header.less
+++ b/src/Frontend/src/components/common/Header.less
@@ -320,6 +320,8 @@
   height: @headerDividerHeight;
   width: 100vw;
 
+  top: @headerHeight;
+
   background-color: @backgroundGray;
 }
 
